--- a/drivers/input/fingerprint/goodix/Makefile
+++ b/drivers/input/fingerprint/goodix/Makefile
@@ -1,2 +1,3 @@
+obj-$(CONFIG_FINGERPRINT_GF3208) += gf_drv_tee.o
 obj-$(CONFIG_FINGERPRINT_GF3258) += gf_drv_tee.o
 gf_drv_tee-objs := gf_spi.o platform.o netlink.o
