--- a/drivers/input/fingerprint/goodix/Kconfig
+++ b/drivers/input/fingerprint/goodix/Kconfig
@@ -7,3 +7,10 @@ config FINGERPRINT_GF3258
 	tristate "goodix fingerprint gf3258"
 	help
 		say Y to enable gf3258 goodix
+
+config FINGERPRINT_GOODIX_TA
+	tristate "Finger print card goodix"
+	help
+	  Say Y here to enable support for retrieving self-test reports.
+	  If unsure, say N.
+	  To compile this driver as a module, choose M here.
